# web/openapi.json
@@ -2182,6 +2182,23 @@
         "operationId": "workstation_events_endpoint_api_v2_events_get",
         "parameters": [
           {
+            "in": "query",
+            "name": "cursor",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "minimum": 0,
+                  "type": "integer"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Cursor"
+            }
+          },
+          {
             "in": "header",
             "name": "Last-Event-ID",
             "required": false,
